<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_last_match"
            android:enabled="true"
            android:title="@string/match"
            android:icon="@drawable/ic_last_match"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_next_match"
            android:enabled="true"
            android:title="@string/teams"
            android:icon="@drawable/ic_teams"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_favorite"
            android:enabled="true"
            android:title="@string/favorite"
            android:icon="@drawable/ic_favorite"
            app:showAsAction="ifRoom"/>
</menu>